feat: Update Swagger doc
