# docs/swagger.json
@@ -14,6 +14,11 @@
     "paths": {
         "/content/random": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Before calling the API, you needs to set the JWT in the ```Authorization``` header.",
                 "consumes": [
                     "application/json"
@@ -45,7 +50,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.LoginData"
+                            "$ref": "#/definitions/controller.JSONRequest-dto_LoginData"
                         }
                     }
                 ],
@@ -123,6 +128,14 @@
         }
     },
     "definitions": {
+        "controller.JSONRequest-dto_LoginData": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/dto.LoginData"
+                }
+            }
+        },
         "controller.JSONRequest-dto_RegisterData": {
             "type": "object",
             "properties": {
@@ -172,8 +185,10 @@
         }
     },
     "securityDefinitions": {
-        "BasicAuth": {
-            "type": "basic"
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
