# modules/controller/content_controller.go
@@ -15,6 +15,14 @@ type ContentController struct {
     ContentService service.IContentService
 }
 
+// RandomContent godoc
+// @Summary      Get Random UUID
+// @Description  Before calling the API, you needs to set the JWT in the ```Authorization``` header.
+// @Tags         Secured API
+// @Accept       json
+// @Produce      plain
+// @Security     ApiKeyAuth
+// @Router       /content/random [get]
 func (cc ContentController) RandomContent(ctx *gin.Context) {
 	ctx.String(
 		http.StatusOK,
